--- a/landing-page/public/locales/ru.json
+++ b/landing-page/public/locales/ru.json
@@ -81,7 +81,13 @@
         "subtitle": "Узнайте, как Stockman помогает предпринимателям каждый день.",
         "t1": "С тех пор как я использую Stockman, я больше не теряю деньги из-за отсутствия товаров. ИИ всегда предупреждает меня вовремя!",
         "t2": "Приложение очень простое. Мои сотрудники освоили его за 10 минут. Управление кассой идеальное.",
-        "t3": "Обожаю маркетплейс! Я могу сравнивать цены поставщиков и заказывать напрямую. Огромная экономия времени."
+        "t3": "Обожаю маркетплейс! Я могу сравнивать цены поставщиков и заказывать напрямую. Огромная экономия времени.",
+        "t1_author": "Amadou Diallo",
+        "t1_job": "Electronics Shop",
+        "t2_author": "Sarah Kouassi",
+        "t2_job": "Express Supermarket",
+        "t3_author": "Paul N'Goma",
+        "t3_job": "Central Pharmacy"
     },
     "pricing": {
         "title": "Выберите свой план",
@@ -90,7 +96,6 @@
         "popular": "Популярный",
         "starter": {
             "name": "Стартовый",
-            "price": "1000",
             "f1": "1 пользователь",
             "f2": "До 100 товаров",
             "f3": "Базовое управление запасами",
@@ -99,7 +104,6 @@
         },
         "business": {
             "name": "Бизнес",
-            "price": "2500",
             "f1": "3 пользователя",
             "f2": "Безлимитные товары",
             "f3": "ИИ-ассистент Stockman",
