Fix localization: add missing sections, refactor FAQ logic, and fix build errors

--- a/landing-page/public/locales/ar.json
+++ b/landing-page/public/locales/ar.json
@@ -455,5 +455,21 @@
         "title": "سياسة الخصوصية",
         "version": "آخر تحديث: 13 فبراير 2026",
         "content": "<p>مرحباً بكم في Stockman. إن حماية بياناتكم الشخصية هي أولوية بالنسبة لنا.</p><h3>1. جمع البيانات</h3><p>نقوم بجمع: معلومات التعريف (الاسم، البريد الإلكتروني، الهاتف)، البيانات المهنية (المتجر، المخزون، المعاملات)، البيانات التقنية (IP، الجهاز، السجلات).</p><h3>2. استخدام البيانات</h3><p>تُستخدم بياناتكم حصرياً لـ: إدارة مخزونكم ومبيعاتكم، تأمين حسابكم، تحسين خدماتنا والامتثال لالتزاماتنا القانونية.</p><h3>3. التخزين والأمان</h3><p>يتم تخزين بياناتكم على خوادم آمنة (MongoDB Atlas) وتشفيرها. نحن نستخدم بروتوكول HTTPS لجميع عمليات النقل.</p><h3>4. مشاركة البيانات</h3><p>نحن لا نبيع أو نؤجر بياناتكم. يمكن مشاركتها فقط مع مقدمي الخدمات التقنية لدينا والسلطات إذا كان القانون يقتضي ذلك.</p><h3>5. حقوقكم (RGPD)</h3><p>لديك حقوق الوصول والتصحيح والمحو وقابلية النقل. مارس هذه الحقوق من علامة تبويب الإعدادات في التطبيق.</p><h3>6. الاتصال</h3><p>لأي استفسار، تواصل معنا عبر التطبيق أو على <a href='mailto:contact@stockman.pro' style='color:var(--primary)'>contact@stockman.pro</a>.</p>"
+    },
+    "faq": {
+        "title": "الأسئلة الشائعة",
+        "q1": "هل يعمل بدون إنترنت؟",
+        "a1": "نعم، يعمل Stockman في وضع عدم الاتصال. ستتم مزامنة بياناتك بمجرد عودة الاتصال.",
+        "q2": "هل بياناتي آمنة؟",
+        "a2": "بالتأكيد. نحن نستخدم تشفيراً من المستوى البنكي لحماية جميع معلوماتك التجارية."
+    },
+    "download": {
+        "title": "جاهز للانتقال إلى المستوى التالي؟",
+        "subtitle": "انضم إلى آلاف التجار الذين قاموا بتحديث إدارتهم.",
+        "app_store": "متجر التطبيقات",
+        "google_play": "جوجل بلاي",
+        "secure": "دفع آمن",
+        "support": "دعم فني محترف",
+        "updates": "تحديثات مستمرة"
     }
 }
