--- a/landing-page/public/locales/en.json
+++ b/landing-page/public/locales/en.json
@@ -131,6 +131,8 @@
     "download": {
         "title": "Ready to take it to the next level?",
         "subtitle": "Join thousands of merchants who have modernized their management.",
+        "app_store": "App Store",
+        "google_play": "Google Play",
         "secure": "Secure Payments",
         "support": "Pro Support",
         "updates": "Continuous Updates"
