--- a/landing-page/public/locales/es.json
+++ b/landing-page/public/locales/es.json
@@ -131,6 +131,8 @@
     "download": {
         "title": "¿Listo para dar el siguiente paso?",
         "subtitle": "Únete a miles de comerciantes que han modernizado su gestión.",
+        "app_store": "App Store",
+        "google_play": "Google Play",
         "secure": "Pagos seguros",
         "support": "Soporte profesional",
         "updates": "Actualizaciones continuas"
